--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pacman</title>
     <link rel="shortcut icon" href="./img/Pacman.svg" type="image/x-icon">
     <script src="./code/index.js" type="module"></script>
+    <link rel="stylesheet" href="./style/pacman.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/play-ground.css">
 </head>
