Added ghosts and loosing.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./code/index.js" type="module"></script>
     <link rel="stylesheet" href="./style/switch.css">
     <link rel="stylesheet" href="./style/pacman.css">
+    <link rel="stylesheet" href="./style/ghost.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/play-ground.css">
 </head>
