Fixed size returning for pac-girl. Reorganised header adjustments.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./style/play-ground.css">
 </head>
 <body>
-    
+    <div class="header"></div>
+    <div class="container"></div>
+    <div class="picture"><img src="img/family.jpeg" alt="pacman family"/></div>
 </body>
 </html>
